Styling the start button. Implementation of reloading the playing field after a collision

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 <body>
 <!---->
-	<div class="score"></div>
-	<div class="game">
-		<div class="game__start">Start</div>
-		<div class="game__area"></div>
+	<div class="container">
+		<div class="score"></div>
+		<div class="game">
+			<div class="game__start">Start</div>
+			<div class="game__area">
+				
+			</div>
+		</div>
 	</div>
-
 </body>
 </html>
