Added lives/score panel. Changed behavior start/continue button

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 <body>
 <!---->
 	<div class="container">
-		<div class="score"></div>
+		
 		<div class="game">
-			<div class="game__start">Start</div>
-			<div class="game__area">
-				
-			</div>
+			<div class="game__score game--text hide" >dfhdhdh</div>
+			<div class="game__start game--text">Start</div>
+			<div class="game__area"></div>
 		</div>
 	</div>
 </body>
