--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 	<div class="container">
 		
 		<div class="game">
-			<div class="game__score game--text hide" >dfhdhdh</div>
+			<div class="game__score game--text hide" >Score</div>
 			<div class="game__start game--text">Start</div>
-			<div class="game__area"></div>
+			<div class="game__area">
+			</div>
 		</div>
 	</div>
 </body>
